src/objects/Non_Borrowing_Resident__c.object
<CustomObject>
    <fields>
        <fullName>Client_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Id</label>
        <referenceTo>Client__c</referenceTo>
        <relationshipLabel>Non-Borrowing Resident</relationshipLabel>
        <relationshipName>Non_Borrowing_Resident</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <label>Non Borrowing Resident Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IsActiveNBR__c</fullName>
        <defaultValue>true</defaultValue>
        <description>if checked means alive NBR</description>
        <label>Is Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Loan_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Loan Id</label>
        <referenceTo>Loan_New__c</referenceTo>
        <relationshipLabel>Non-Borrowing Resident</relationshipLabel>
        <relationshipName>Non_Borrowing_Resident</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Monthly_Income__c</fullName>
        <label>Non Borrowing Resident Monthly Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Non_Borrowing_Resident_Name__c</fullName>
        <label>Non Borrowing Resident</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_to_Client__c</fullName>
        <label>Relationship to Client</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mother</fullName>
                </value>
                <value>
                    <fullName>Father</fullName>
                </value>
                <value>
                    <fullName>Child</fullName>
                </value>
                <value>
                    <fullName>Sister</fullName>
                </value>
                <value>
                    <fullName>Brother</fullName>
                </value>
                <value>
                    <fullName>Aunt</fullName>
                </value>
                <value>
                    <fullName>Uncle</fullName>
                </value>
                <value>
                    <fullName>Niece</fullName>
                </value>
                <value>
                    <fullName>Nephew</fullName>
                </value>
                <value>
                    <fullName>Friend</fullName>
                </value>
                <value>
                    <fullName>Grandchild</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Non-Borrowing Resident</label>
    <nameField>
        <displayFormat>NBR-{0}</displayFormat>
        <label>Non-Borrowing Resident Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Non-Borrowing Resident</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <sharingReasons>
        <fullName>LoanProcessor__c</fullName>
        <label>Loan Processor</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>Loan_Officer__c</fullName>
        <label>Loan Officer</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>Origination_Loan_Officer__c</fullName>
        <label>Origination Loan Officer</label>
    </sharingReasons>
</CustomObject>